[gd_scene load_steps=22 format=2]

[ext_resource path="res://backgroundTelaInicial.png" type="Texture" id=1]
[ext_resource path="res://Cenas/TelaInicial.gd" type="Script" id=2]
[ext_resource path="res://Sprites/font/FontTitle.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/font/04B_30__.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://Sprites/Sons/Retro Beat.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=11]
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/styles/disabled = SubResource( 24 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=17]
Button/styles/disabled = SubResource( 12 )
Button/styles/focus = SubResource( 13 )
Button/styles/hover = SubResource( 14 )
Button/styles/normal = SubResource( 15 )
Button/styles/pressed = SubResource( 16 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=23]
Button/styles/disabled = SubResource( 18 )
Button/styles/focus = SubResource( 19 )
Button/styles/hover = SubResource( 20 )
Button/styles/normal = SubResource( 21 )
Button/styles/pressed = SubResource( 22 )

[node name="TelaInicial" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512.5, 295.5 )
scale = Vector2( 1.46429, 1.50493 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Sprite"]
margin_left = -350.0
margin_top = -203.0
margin_right = 355.0
margin_bottom = 204.0
color = Color( 0.0117647, 0.0117647, 0.0117647, 0.45098 )

[node name="Label" type="Label" parent="Sprite"]
margin_left = -208.09
margin_top = -92.3976
margin_right = 237.91
margin_bottom = -53.3976
custom_fonts/font = SubResource( 1 )
text = "AS  AVENTURAS  DE  MENNO"

[node name="Label2" type="Label" parent="."]
margin_left = 9.0
margin_top = 521.0
margin_right = 112.0
margin_bottom = 576.0
custom_colors/font_color = Color( 0, 0.976471, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "    FKL 
Jogos"

[node name="Controls" type="VBoxContainer" parent="."]
margin_left = 388.0
margin_top = 247.0
margin_right = 556.0
margin_bottom = 348.0
rect_scale = Vector2( 1.6, 1.4 )
alignment = 1

[node name="Button" type="Button" parent="Controls"]
margin_top = 18.0
margin_right = 168.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( -367, 112 )
theme = SubResource( 11 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.894118, 0.890196, 0.0588235, 1 )
custom_colors/font_color_pressed = Color( 0.733333, 0.160784, 0.831373, 1 )
custom_fonts/font = SubResource( 2 )
text = "JOGAR"
flat = true

[node name="Button2" type="Button" parent="Controls"]
margin_top = 45.0
margin_right = 168.0
margin_bottom = 62.0
theme = SubResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.933333, 0.858824, 0.0431373, 1 )
custom_colors/font_color_pressed = Color( 0.733333, 0.160784, 0.831373, 1 )
custom_fonts/font = SubResource( 2 )
text = "CONTROLES"

[node name="Button3" type="Button" parent="Controls"]
margin_top = 66.0
margin_right = 168.0
margin_bottom = 83.0
theme = SubResource( 23 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.960784, 0.878431, 0.0588235, 1 )
custom_colors/font_color_pressed = Color( 0.67451, 0.0784314, 0.988235, 1 )
custom_fonts/font = SubResource( 2 )
text = "SAIR"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0

[connection signal="pressed" from="Controls/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Controls/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Controls/Button3" to="." method="_on_Button3_pressed"]
